--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="og: title" content="HTML CSS homework 10" />
+    <meta property="og:title" content="HTML CSS homework 10" />
     <title>Task3</title>
     <link rel="stylesheet" href="style.css" />
   </head>
